--- a/Styles/style.css
+++ b/Styles/style.css
@@ -12,3 +12,72 @@
     font-style: normal;
 
 }
+
+/* Shared Styles Started */
+
+.display-flex{
+
+    display: flex;
+
+}
+
+/* Dark 02 */
+
+.text-gray{
+
+    color: #424242;
+
+}
+
+/* Dark 03 */
+
+.text-light{
+
+    color: #727272;
+
+}
+
+.bg-light{
+
+    background-color: rgba(255, 144, 14, 0.1);
+
+}
+
+/* Shared Styles Ended */
+
+
+
+/* Header Styles Started */
+
+
+
+/* Header Styles Ended */
+
+/* Navbar Related Styles Started */
+
+.navbar{
+    justify-content: space-between;
+}
+
+.nav-items{
+
+    list-style: none;
+    margin-right: 30px;
+
+}
+
+.nav-link{
+
+    text-decoration: none;
+    font-weight: 500px;
+
+}
+
+
+.navbar, banner{
+    max-width: 1440px;
+    margin: 0 auto;
+    
+}
+
+/* Navbar Related styles Ended */
