--- a/Styles/style.css
+++ b/Styles/style.css
@@ -43,6 +43,16 @@
 
 }
 
+.btn-primary{
+
+    background-color: #FF900E;
+    color: white;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    border-radius: 8px;
+    border: none;
+}
+
 /* Shared Styles Ended */
 
 
@@ -56,7 +66,16 @@
 /* Navbar Related Styles Started */
 
 .navbar{
+
     justify-content: space-between;
+    align-items: center;
+
+}
+
+.brand{
+
+    font-weight: 700px;
+    font-size: 2.8rem;
 }
 
 .nav-items{
@@ -74,10 +93,49 @@
 }
 
 
-.navbar, banner{
+.navbar, .banner{
+
     max-width: 1440px;
     margin: 0 auto;
-    
+
 }
 
 /* Navbar Related styles Ended */
+
+/* Banner Related Styles Started */
+
+.banner-content{
+
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+
+}
+
+.banner-title{
+    
+    font-weight: 700;
+    font-size: 4rem;
+
+}
+
+.banner-img{
+
+    max-width: 100%;
+
+}
+
+/* Banner Related Styles Ended */
+
+/* Responsive Media Query */
+
+@media screen and (max-width:576px) {
+
+    .navbar, .nav-link{
+
+        flex-direction: column;
+
+    }
+    
+}
