--- a/Styles/style.css
+++ b/Styles/style.css
@@ -53,6 +53,25 @@
     border: none;
 }
 
+.text-primary{
+
+    color: #FF900E;
+
+}
+
+main{
+
+    max-width: 1440px;
+    margin: 0 auto;
+    
+}
+
+main > section{
+
+    margin-top: 130px;
+
+}
+
 /* Shared Styles Ended */
 
 
@@ -128,14 +147,78 @@
 
 /* Banner Related Styles Ended */
 
+/* Team and Feature Related Styles Started */
+
+.teams{
+
+    align-items: center;
+
+}
+
+.team-img-container{
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+
+}
+
+.our-features{
+
+    margin-left: 130px;
+    max-width: 530px;
+
+}
+
+.feature-title{
+
+    font-size: 2.8rem;
+
+}
+
+#quick-list{
+    font-weight: 500;
+}
+
+/* Team and Feature Related Styles Ended */
+
 /* Responsive Media Query */
 
 @media screen and (max-width:576px) {
 
-    .navbar, .nav-link{
+    .navbar, 
+    .nav-link,
+    .teams{
 
         flex-direction: column;
 
     }
+
+    .team-img-container{
+
+        grid-template-columns: repeat(1, 1fr);
+
+    }
+    .our-features{
+
+        margin-left: 2px;
+
+    }
     
+}
+
+/* Medium Size Device Media Query */
+
+@media screen and (min-width:576px) and (max-width:992px) {
+    
+    .teams{
+
+        flex-direction: column;
+
+    }
+
+    .our-features{
+
+        margin: 50px auto;
+    }
 }
